basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__rendered_markdown_view-2.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Quotes                                                                       │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│ You can quote text by adding a > symbols before the text.                    │"
"│                                                                              │"
"│ ┃ Human beings face ever more complex and urgent problems, and their         │"
"│ ┃ effectiveness in dealing with these problems is a matter that is critical  │"
"│ ┃ to the stability and continued progress of society.                        │"
"│ ┃                                                                            │"
"│ ┃ - Doug Engelbart, 1961                                                     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ READ ────────────────────────────────────────────────────────────────────────╯"
