basalt/src/note_editor/snapshots/basalt_tui__note_editor__editor__tests__rendered_markdown_view-5.snap
---
source: basalt/src/note_editor/editor.rs
expression: terminal.backend()
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Lists                                                                        │"
"│ ════════════════════════════════════════════════════════════════════════════ │"
"│ You can create an unordered list by adding a -, *, or + before the text.     │"
"│                                                                              │"
"│ - First list item                                                            │"
"│ - Second list item                                                           │"
"│ - Third list item                                                            │"
"│                                                                              │"
"│ To create an ordered list, start each line with a number followed by a .     │"
"│ symbol.                                                                      │"
"│                                                                              │"
"│ 1. First list item                                                           │"
"│ 2. Second list item                                                          │"
"│ 3. Third list item                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ READ ────────────────────────────────────────────────────────────────────────╯"
